# backup

./: .gitignore  CMakeLists.txt
config/: aicp_config.yaml
filters_config/: icp_autotuned.yaml
pod-build/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt  spoof-driving-posture
pod-build/include/lcmtypes/: motion_estimate.h  motion_estimate.hpp  reg_feature_t.h  reg_features_t.h  vs_collection_config_t.h  vs_color_t.h  vs_cov_collection_t.h  vs_cov_t.h  vs_link_collection_t.h  vs_link_t.h  vs_object_collection_t.h  vs_object_t.h  vs_point3d_list_collection_t.h  vs_point3d_list_t.h  vs_point3d_t.h  vs_property_t.h  vs_reset_collections_t.h  vs_text_collection_t.h  vs_text_t.h
pod-build/include/lcmtypes/reg/: feature_t.hpp  features_t.hpp
pod-build/include/lcmtypes/vs/: collection_config_t.hpp  color_t.hpp  cov_collection_t.hpp  cov_t.hpp  link_collection_t.hpp  link_t.hpp  object_collection_t.hpp  object_t.hpp  point3d_list_collection_t.hpp  point3d_list_t.hpp  point3d_t.hpp  property_t.hpp  reset_collections_t.hpp  text_collection_t.hpp  text_t.hpp
pod-build/lib/pkgconfig/: lcmtypes_motion_estimate.pc  visualization.pc
pod-build/src/pvis/: cmake_install.cmake
src/pvis/: CMakeLists.txt  PoseCloud.cpp  README  conv.cpp  main.cpp  path.cpp  pos.cpp  poses.txt  visPath.cpp
src/pvis/include/: PoseCloud.hpp  path.hpp
